examples/kubernetes/keptn-lifecycle-toolkit/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: simpleingressroute
  namespace: keptn-lifecycle-toolkit-system
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`jaeger.<ENV-NAME>-<ENV-USER-ID>-01.<ENV-ANIMAL>.<ENV-DOMAIN>`) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: jaeger-query
          port: 16686
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: promsimpleingressroute
  namespace: monitoring
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`prom.<ENV-NAME>-<ENV-USER-ID>-01.<ENV-ANIMAL>.<ENV-DOMAIN>`) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: prometheus-k8s
          port: 9090
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: grafanasimpleingressroute
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`grafana.<ENV-NAME>-<ENV-USER-ID>-01.<ENV-ANIMAL>.<ENV-DOMAIN>`) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: grafana
          port: 3000
